--- a/index.html
+++ b/index.html
@@ -1,309 +1,82 @@
-i<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <html>
-    <head>
-      <title>FreeCodeCamp Survey Form</title>
-      <meta charset="utf-8" />
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
-      <b>Appendix A </b>
-      <h2> Welcome to the survey!</h2>
-      <h3>topic: <i>Research Study on monopoly and its effect: wealth inequality</h3></i>
-      <p>
-        Info about survey: </p>
-      <p>
-        Dear Participant,
-
-
-        I am interested in finding how monopoly affects our life, and how could it be reduced. You will be asked to complete the following questionnaire. This will take approximately 5 minutes of your time. All information will be kept anonymous and confidential. If anonymous, this means that your name will not appear anywhere and no one except me will know about your specific answers. If confidential, I will assign a number to your responses, and only I will have the key to indicate which number belongs to which participant. In any articles I write or any presentations that I make, I will use a made-up name for you, and I will not reveal any details or I will change details about where you work, where you live, any personal information about you, and so forth.</p>
-
-      <p>
-        The benefit of this research is that you will be helping us to understand if there is indeed a severe imbalance on wealth ownership and how much can monopoly be diminished while at the same time growing the lower and middle class’s wealth. The risks to you for participating in this study are none. If you do not wish to continue, you have the right to withdraw from the study, without penalty, at any time.
-      </p>
-      <form>
-        <b>Appendix B</b>
-        <h1>Questionnaire</h1>
-
-        <div class="question">
-          1. What is your age?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"/>
-            <label class="form-check-label" for="exampleRadios1">
-              <18
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              18-24
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              25-30
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              31-40
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              >40
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          2. What is your gender?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Male
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              Female
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          3. What is your current status?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Work
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              College and work
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" /
-            <label class="form-check-label" for="exampleRadios2">
-              College
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          4. What is your opinion on "Wealth Inequality"
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Bad
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              Not very good, but there is opportunity to use it for our benefit
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              Good
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          5. How often do you find yourself not being able to afford your basic needs?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Everyday
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Often
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              Sometimes
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              Rarely
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" /
-            <label class="form-check-label" for="exampleRadios2">
-              Never
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          6. On a scale from 1-5, how unfair do you think this imbalance/inequality is?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              1
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              2
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" />
-            <label class="form-check-label" for="exampleRadios2">
-              3
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              4
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" /
-            <label class="form-check-label" for="exampleRadios2">
-              5
-            </label>
-          </div>
-        </div>
-
-
-
-
-        <div class="question">
-          7. Do you think that wealth inequality is connected to monopoly?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              yes
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              No
-            </label>
-          </div>
-        </div>
-
-
-
-        <div class="question">
-          8. Do you think that reducing taxes and helping the small and intermediate businesses of the private sector and the economy grow is the most efficient way of reducing monopoly?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Yes
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              No
-            </label>
-          </div>
-        </div>
-
-
-        <div class="question">
-          9. Do you think that reducing monopoly by empowering the public sector and the government through taxes is the most efficient way
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Yes
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              No
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          10. How difficult do you think it is to put the solution you chose into effect?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Easy
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Medium
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Hard
-            </label>
-          </div>
-        </div>
-
-        <div class="question">
-          11.  How often do you support small businesses and the private sector in your daily life?
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Everyday
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Sometimes
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2"/>
-            <label class="form-check-label" for="exampleRadios2">
-              Rarely
-            </label>
-          </div>
-        </div>
-
-        I voluntarily, consent to participation in the research <input class="form-check-label" type="checkbox" class="form-check-input" id="exampleCheck1" required/>
-      </br>
-      </br>
-      <button type="submit" class="btn btn-primary">Submit</button>
-      Thank you for your participation!
-      </form>
-    </body>
-  </html>
+<head>
+  <meta charset="utf-8">
+  <title>Midterm</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+	<form method="submit">
+		<h3>Survey (not really); more like Input Form</h3>
+		<h4>Text Input Elements</h4>
+		
+		<a class="label_class">Student Name</a>
+		</br>
+		<input name="student_name" type="text" placeholder="Default Input"/>
+		</br></br>
+		
+		<a class="label_class">Disabled Input</a>
+		</br>
+		<input type="text" placeholder="Disabled Input" disabled/>
+		</br></br>
+		
+		<a class="label_class">Read-Only Input</a>
+		</br>
+		<input name="read_only_input" type="text" placeholder="Read-Only Input"/>
+		</br></br>
+		
+		<a name="comments" class="label_class">Comments regarding the course</a>
+		</br>
+		<textarea rows="3" placeholder="Textarea with 3 rows"></textarea>
+		</br></br>
+		
+		<a class="label_class">Password</a>
+		</br>
+		<input name="password" type="password" placeholder="***********"/>
+		</br></br>
+		
+		<h2>Selecet Elements</h2>
+		
+		<a class="label_class">Did you find the course exam difficult?</a>
+		</br>
+		<select name="select">
+			 <option value="yes">Yes!</option>
+			 <option value="yes">No!</option>
+			 <option value="yes">Maybe</option>
+			 <option value="yes">Perhaps</option>
+			 <option value="yes">Possibly</option>
+			 <option value="yes">Conceivably</option>
+			 <option value="yes">Perchance</option>
+			 <option value="yes">Feasibly</option>
+			 <option value="yes">Reasonably</option>
+			 <option value="yes">Imaginably</option>
+		</select>
+		
+		
+		<h2>Checkboxes and Radioboxes</h2>
+		
+		<a class="label_class">How did you prepare for the exam (Please select more than one)</a>
+		</br>
+		<input  type="checkbox" name="one_check" value="one"> Studied the slides<br>
+		<input type="checkbox" name="two_check" value="two"> Completed all assignments<br>
+		<input type="checkbox" name="three_check" value="three"> Online tutorials<br>
+		
+		</br></br>
+		
+		<a  class="label_class">Did you select to study in a group?</a>
+		</br>
+		<input type="radio" name="one_radio" value="one" checked>Option one: Group study</br>
+		<input type="radio" name="one_radio" value="two">Option two: Studied alone
+		
+		</br></br>
+		
+		<input type="submit" name="submit" value="submit"/>
+		<input type="reset" name="reset" value="reset"/>
+	</form>
+	
+	<button onclick="print()">Print</button>
+  <script src="./script.js"></script>
+</body>
+</html>
